--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <p class="logoAndGames">
-          <img class="logo" src="/img/blizz_logo.png">
+          <img class="logo" src="./img/blizz_logo.png">
       
           <nav class="games">
             <div class="dropdown">
